// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ImpoundLot it renders correctly WITH map 1`] = `
<withTheme(Card)
  style={
    Array [
      Object {
        "marginHorizontal": 17,
      },
      Object {
        "marginBottom": 17,
      },
    ]
  }
>
  <Card.Content>
    <View
      style={
        Array [
          Object {
            "flex": 1,
          },
          Object {
            "justifyContent": "space-between",
          },
          Object {
            "flexDirection": "row",
          },
        ]
      }
    >
      <Paragraph
        style={
          Object {
            "color": "#042EC6",
          }
        }
      >
        Status
      </Paragraph>
      <Caption>
        2020-01-01 00:00
      </Caption>
    </View>
    <View
      style={
        Object {
          "marginTop": 11.22,
        }
      }
    >
      <Caption>
        [missing "en.address" translation]
      </Caption>
      <Paragraph>
        This is an address
      </Paragraph>
    </View>
  </Card.Content>
  <Card.Actions
    style={
      Object {
        "justifyContent": "space-between",
      }
    }
  >
    <withTheme(Button)
      color="#042EC6"
      onPress={[Function]}
    >
      [missing "en.call" translation]
    </withTheme(Button)>
    <withTheme(Button)
      color="#042EC6"
      onPress={[Function]}
    >
      [missing "en.directions" translation]
    </withTheme(Button)>
  </Card.Actions>
</withTheme(Card)>
`;

exports[`ImpoundLot it renders correctly WITHOUT map 1`] = `
<withTheme(Card)
  style={
    Array [
      Object {
        "marginHorizontal": 17,
      },
      Object {
        "marginBottom": 17,
      },
    ]
  }
>
  <Card.Content>
    <View
      style={
        Array [
          Object {
            "flex": 1,
          },
          Object {
            "justifyContent": "space-between",
          },
          Object {
            "flexDirection": "row",
          },
        ]
      }
    >
      <Paragraph
        style={
          Object {
            "color": "#042EC6",
          }
        }
      >
        Status
      </Paragraph>
      <Caption>
        2020-01-01 00:00
      </Caption>
    </View>
  </Card.Content>
  <Card.Actions
    style={
      Object {
        "justifyContent": "flex-end",
      }
    }
  />
</withTheme(Card)>
`;
